[tool.poetry]
name = "pipen-verbose"
version = "0.14.3"
description = "Add verbosal information in logs for pipen."
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-verbose"
repository = "https://github.com/pwwang/pipen-verbose"

[tool.poetry.dependencies]
python = "^3.9"
pipen = "0.17.*"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
verbose = "pipen_verbose:PipenVerbose"

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning --cov-config=.coveragerc --cov=pipen_verbose --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
# asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
