[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipen-verbose"
dynamic = ["version"]
description = "Add verbosal information in logs for pipen."
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"pipen>=1.1",
]

[project.urls]
Homepage = "https://github.com/pwwang/pipen-verbose"
Repository = "https://github.com/pwwang/pipen-verbose"

[project.entry-points."pipen"]
verbose = "pipen_verbose:PipenVerbose"

[tool.hatch.version]
path = "pipen_verbose.py"

[dependency-groups]
dev = [
	"pytest>=8,<9",
	"pytest-cov>=6,<7",
]

[tool.setuptools]
py-modules = ["pipen_verbose"]

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning --cov-config=.coveragerc --cov=pipen_verbose --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
# asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
